--- a/src/MainGuessWho.form
+++ b/src/MainGuessWho.form
@@ -35,7 +35,7 @@
           <grid id="c959d" binding="_001" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -45,7 +45,7 @@
           <grid id="bdd8" binding="_006" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -55,7 +55,7 @@
           <grid id="8145e" binding="_002" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -65,7 +65,7 @@
           <grid id="b0552" binding="_003" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -75,7 +75,7 @@
           <grid id="35f0" binding="_004" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -85,7 +85,7 @@
           <grid id="c0afc" binding="_005" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -95,7 +95,7 @@
           <grid id="1da55" binding="_010" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -105,7 +105,7 @@
           <grid id="ef6c5" binding="_022" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -115,7 +115,7 @@
           <grid id="720c0" binding="_016" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -125,7 +125,7 @@
           <grid id="f361d" binding="_011" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -135,7 +135,7 @@
           <grid id="cb7ab" binding="_012" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -145,7 +145,7 @@
           <grid id="75197" binding="_018" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -155,7 +155,7 @@
           <grid id="1237f" binding="_017" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -165,7 +165,7 @@
           <grid id="c4d80" binding="_024" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -175,7 +175,7 @@
           <grid id="b089a" binding="_023" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -185,7 +185,7 @@
           <grid id="f73e9" binding="_007" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -195,7 +195,7 @@
           <grid id="52e8d" binding="_008" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -205,7 +205,7 @@
           <grid id="965af" binding="_009" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -215,7 +215,7 @@
           <grid id="7264" binding="_019" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -225,7 +225,7 @@
           <grid id="9db09" binding="_020" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -235,7 +235,7 @@
           <grid id="990a7" binding="_021" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -245,7 +245,7 @@
           <grid id="9991d" binding="_013" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -255,7 +255,7 @@
           <grid id="69b1e" binding="_014" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -265,7 +265,7 @@
           <grid id="11026" binding="_015" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="140" height="120"/>
+                <preferred-size width="150" height="150"/>
               </grid>
             </constraints>
             <properties/>
@@ -338,6 +338,7 @@
         <properties>
           <background color="-16777216"/>
           <enabled value="true"/>
+          <horizontalAlignment value="2"/>
           <text value="Person's Name"/>
         </properties>
       </component>
