--- a/src/MainGuessWho.form
+++ b/src/MainGuessWho.form
@@ -29,7 +29,7 @@
           <grid id="c959d" binding="_001" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -44,7 +44,7 @@
           <grid id="bdd8" binding="_006" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -58,7 +58,7 @@
           <grid id="8145e" binding="_002" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -73,7 +73,7 @@
           <grid id="b0552" binding="_003" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -87,7 +87,7 @@
           <grid id="35f0" binding="_004" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -102,7 +102,7 @@
           <grid id="c0afc" binding="_005" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -117,7 +117,7 @@
           <grid id="1da55" binding="_010" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -131,7 +131,7 @@
           <grid id="ef6c5" binding="_022" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -145,7 +145,7 @@
           <grid id="720c0" binding="_016" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -159,7 +159,7 @@
           <grid id="f361d" binding="_011" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -174,7 +174,7 @@
           <grid id="cb7ab" binding="_012" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -189,7 +189,7 @@
           <grid id="75197" binding="_018" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -203,7 +203,7 @@
           <grid id="1237f" binding="_017" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -217,7 +217,7 @@
           <grid id="c4d80" binding="_024" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -231,7 +231,7 @@
           <grid id="b089a" binding="_023" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -245,7 +245,7 @@
           <grid id="f73e9" binding="_007" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -259,7 +259,7 @@
           <grid id="52e8d" binding="_008" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -273,7 +273,7 @@
           <grid id="965af" binding="_009" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -288,7 +288,7 @@
           <grid id="7264" binding="_019" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -302,7 +302,7 @@
           <grid id="9db09" binding="_020" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -316,7 +316,7 @@
           <grid id="990a7" binding="_021" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -330,7 +330,7 @@
           <grid id="9991d" binding="_013" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -344,7 +344,7 @@
           <grid id="69b1e" binding="_014" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -358,7 +358,7 @@
           <grid id="11026" binding="_015" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="200"/>
+                <preferred-size width="110" height="110"/>
               </grid>
             </constraints>
             <properties>
@@ -386,11 +386,12 @@
       <component id="47e2e" class="javax.swing.JTextField" binding="QuestionBarTextField">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="100"/>
           </grid>
         </constraints>
         <properties>
           <background color="-9313793"/>
+          <font size="20"/>
           <text value=""/>
         </properties>
       </component>
